--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             🎉 OHMYGODDD YOU COMPLETED IT! 🎉<br>
             <p>This is for you my love</p>
             <video width="400" controls>
-                <source src="IMG_2835.MOV">
+                <source src="IMG_2835.mov">
                 Your browser does not support HTML video.
             </video>
 
