--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="final-message" id="finalMessage">
             🎉 OHMYGODDD YOU COMPLETED IT! 🎉<br>
             i love you the most! grishu<br>
-            Now check your whatsapp, something's there! ❤️
+            Now check your whatsapp, your prize's there! ❤️
         </div>
     </div>
 
